# parallel_poisson

./: .gitignore  CMakeLists.txt  README.md  configure.slurm  matrix.txt  mpi_run.sh  openmp_run.sh  pcgCholErr.txt  posix_run.sh  py_mpi_run.sh  requirements.txt  single_run.sh  source.txt
src/: mpi.py  mpi_main.c  openmp_main.c  posix_main.c
src/matrix/: matrix.h
src/utils/: utils.h
